--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -147,21 +147,27 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
   publish:
-    needs: [ build, release ]
+    # This job needs the 'release' job to finish and the 'build' job for its outputs.
+    needs: [build, release]
     runs-on: ubuntu-latest
     permissions:
+      # This permission is required to push a commit back to the repository.
       contents: write
     steps:
+      # Step 1: Check out the repository again, this time targeting your default branch.
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
+          # Checkout the default branch (main) to push the manifest update.
           ref: "main"
 
+      # Step 2: Download the build artifacts again to get the .zip filename.
       - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
           name: build-artifact
 
+      # Step 3: Update manifest.json using jq for reliability
       - name: Update manifest.json
         env:
           RELEASE_TAG: ${{ needs.build.outputs.tag }}
@@ -169,37 +175,37 @@ jobs:
           TARGET_ABI: ${{ needs.build.outputs.target_abi }}
         run: |
           set -ex # Exit immediately if a command fails and print each command.
-          
+
           # --- Define constants and variables ---
           VERSION_WITH_PRERELEASE=${RELEASE_TAG#v}
           VERSION=${VERSION_WITH_PRERELEASE%%-*}
           PLUGIN_GUID="ddb5eacb-4557-4882-a9b6-d6a91f8d1ebd"
-          
+
           echo "Processing release tag: ${RELEASE_TAG}"
           echo "Clean version for manifest update is: $VERSION"
           echo "Using Target ABI from build file: $TARGET_ABI"
-          
+
           # --- Construct the download URL manually to avoid API race conditions ---
           DOWNLOAD_URL="https://github.com/${{ github.repository }}/releases/download/${RELEASE_TAG}/${ZIP_NAME}"
           echo "Constructed download URL: ${DOWNLOAD_URL}"
-          
+
           # --- Get other required data for the new manifest entry ---
           ZIP_FILE=$(find . -maxdepth 1 -name "*.zip")
           echo "Found ZIP file: $ZIP_FILE"
-          
+
           CHECKSUM=$(md5sum "$ZIP_FILE" | cut -d' ' -f1)
           echo "Calculated MD5 Checksum: $CHECKSUM"
-          
+
           CHANGELOG=$(cat changelog.md)
           echo "Read changelog."
-          
+
           TIMESTAMP=$(date -u +%Y-%m-%dT%H:%M:%SZ)
           echo "Generated timestamp: $TIMESTAMP"
-          
+
           echo "--- Manifest content BEFORE update ---"
           cat ./manifest.json
           echo "------------------------------------"
-          
+
           # --- Create the new version object as a JSON string ---
           # We append ".0" to the version to match the 4-part version scheme if needed.
           NEW_VERSION_JSON=$(jq -n \
@@ -210,7 +216,7 @@ jobs:
             --arg checksum "$CHECKSUM" \
             --arg timestamp "$TIMESTAMP" \
             '{version: $version, changelog: $changelog, targetAbi: $targetAbi, sourceUrl: $sourceUrl, checksum: $checksum, timestamp: $timestamp}')
-          
+
           # --- Update the manifest file in place using jq ---
           # 1. Find the object in the top-level array with the correct guid.
           # 2. Update its 'versions' array by:
@@ -222,11 +228,12 @@ jobs:
             --arg guid "$PLUGIN_GUID" \
             '(map(if .guid == $guid then .versions |= (map(select(.version != $version_str)) | [$newVersion] + .) else . end))' \
             manifest.json > manifest.tmp && mv manifest.tmp manifest.json
-          
+
           echo "--- Manifest content AFTER update ---"
           cat ./manifest.json
           echo "-----------------------------------"
 
+      # Step 4: Commit and push the updated manifest.json
       - name: Commit and Push manifest.json
         run: |
           git config --global user.name "github-actions[bot]"
